  (Vincent Ladeuil, #526211, #526353)

* Fixed CHM generation by moving the NEWS section template into
  a separate file. (Ian Clatworthy, #524184)

* Merge correctly when this_tree is not a WorkingTree.  (Aaron Bentley)

* Register SIGWINCH handler only when creating a ``TextUIFactory``; avoids
  problems importing bzrlib from a non-main thread.
  (Elliot Murphy, #521989)

* Standardize the error handling when creating a new ``StaticTuple``
  (problems will raise TypeError). (Matt Nordhoff, #457979)

* Warn if pyrex is too old to compile the new ``SimpleSet`` and
  ``StaticTuple`` extensions, rather than having the build fail randomly.
  (John Arbash Meinel, #449776)

Documentation
*************

* Added a link to the Desktop Guide. (Ian Clatworthy)

* Added What's New in Bazaar 2.1 document. (Ian Clatworthy)

* Drop Google Analytics from the core docs as they caused problems
  in the CHM files. (Ian Clatworthy, #502010)

API Changes
***********

* Added ``bzrlib.osutils.set_signal_handler``, a convenience function that
  can set a signal handler and call ``signal.siginterrupt(signum,
  False)`` for it, if the platform and Python version supports it.
  (Andrew Bennetts, #496813)


bzr 2.1.0
#########

:Codename: Strasbourg
:2.1.0: 2010-02-11

This release marks our second long-term-stable series. The Bazaar team
has decided that we will continue to make bugfix-only 2.0.x and 2.1.x
releases, along with 2.2 development releases. 

This is a fairly incremental update, focusing on polish and bugfixing.
There are no changes for supported disk formats. Key updates include
reduced memory consumption for many operations, a new per-file merge
hook, ignore patterns can now include '!' to exclude files, globbing
support for all commands on Windows, and support for addressing home
directories via ``bzr+ssh://host/~/`` syntax.

Users are encouraged to upgrade from the 2.0 stable series.

Bug Fixes
*********

* Don't require testtools to use sftp.
  (Vincent Ladeuil, #516183)
